--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="./assets/css/grid.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -28,7 +28,7 @@
                 </div>
                 <div class="display-control__heading--info">
                     <p>Now playing:</p>
-                    <h2>Sting 57th & 9th</h2>
+                    <h2 class="heading-audio">Sting 57th & 9th</h2>
                 </div>
                 <div class="display-control__heading--icon-plus">
                     <button class="color-icon"><i class="fas fa-plus"></i></button>
@@ -44,7 +44,7 @@
                 <div><button class="btn-previous"><i class="fas fa-backward"></i></button></div>
                 <div><button class="btn-pause">
                     <i class="fas fa-pause-circle"></i>
-                    <i class="fa fa-play"></i>        
+                    <i class="fas fa-play"></i>        
                 </button></div>
                 <div><button class="btn-next"><i class="fas fa-forward"></i></button></div>
                 <div><button class="btn-random"><i class="fas fa-random"></i></button></div>
@@ -60,7 +60,7 @@
                                 <img class="img" src="./assets/img/1.jfif" alt="">
                             </div>
                             <div class="item__info">
-                                <h2>Feded</h2>
+                                <h2 class="name-audio">Feded</h2>
                                 <p>Alan Walker-You were the shadow to my light</p>
                             </div>
                             <div class="item__icon">
@@ -80,7 +80,7 @@
                                 <img class="img" src="./assets/img/2.jfif" alt="">
                             </div>
                             <div class="item__info">
-                                <h2>Robin Hustin</h2>
+                                <h2 class="name-audio">Robin Hustin</h2>
                                 <p>Music provided by NoCopyrightSounds</p>
                             </div>
                             <div class="item__icon">
@@ -100,7 +100,7 @@
                                 <img class="img" src="./assets/img/3.jfif" alt="">
                             </div>
                             <div class="item__info">
-                                <h2>Linked</h2>
+                                <h2 class="name-audio">Linked</h2>
                                 <p>Like lightning and thunder</p>
                             </div>
                             <div class="item__icon">
@@ -120,7 +120,7 @@
                                <img class="img" src="./assets/img/4.jfif" alt="">
                             </div>
                             <div class="item__info">
-                                <h2>Unknown Brain</h2>
+                                <h2 class="name-audio">Unknown Brain</h2>
                                 <p>Want to use this track?</p>
                             </div>
                             <div class="item__icon">
@@ -140,7 +140,7 @@
                                 <img class="img" src="./assets/img/5.jfif" alt="">
                             </div>
                             <div class="item__info">
-                                <h2>Ngôi Nhà Hoa Hồng </h2>
+                                <h2 class="name-audio">Ngôi Nhà Hoa Hồng </h2>
                                 <p>2021 rồi ai vẫn còn nghiện ko ạ?</p>
                             </div>
                             <div class="item__icon">
@@ -160,7 +160,7 @@
                                 <img class="img" src="./assets/img/6.jfif" alt="">
                             </div>
                             <div class="item__info">
-                                <h2>The Ocean</h2>
+                                <h2 class="name-audio">The Ocean</h2>
                                 <p>You can be my guiding light</p>
                             </div>
                             <div class="item__icon">
@@ -180,7 +180,7 @@
                                 <img class="img" src="./assets/img/7.jfif" alt="">
                             </div>
                             <div class="item__info">
-                                <h2>Feded</h2>
+                                <h2 class="name-audio">Feded</h2>
                                 <p>Alan Walker-You were the shadow to my light</p>
                             </div>
                             <div class="item__icon">
@@ -200,7 +200,7 @@
                                 <img class="img" src="./assets/img/8.jfif" alt="">
                             </div>
                             <div class="item__info">
-                                <h2>Hẹn Yêu</h2>
+                                <h2 class="name-audio">Hẹn Yêu</h2>
                                 <p>Cảm giác đau nhất với em</p>
                             </div>
                             <div class="item__icon">
@@ -220,7 +220,7 @@
                                 <img class="img" src="./assets/img/9.jfif" alt="">
                             </div>
                             <div class="item__info">
-                                <h2>Zedd - Beautiful Now</h2>
+                                <h2 class="name-audio">Zedd - Beautiful Now</h2>
                                 <p>Alan Walker-You were the shadow to my light</p>
                             </div>
                             <div class="item__icon">
@@ -240,7 +240,7 @@
                                 <img class="img" src="./assets/img/10.jfif" alt="">
                             </div>
                             <div class="item__info">
-                                <h2>Waiting For Love</h2>
+                                <h2 class="name-audio">Waiting For Love</h2>
                                 <p>Alan Walker-You were the shadow to my light</p>
                             </div>
                             <div class="item__icon">
