--- a/index.html
+++ b/index.html
@@ -44,10 +44,21 @@
                 <div><button class="btn-previous"><i class="fas fa-backward"></i></button></div>
                 <div><button class="btn-pause">
                     <i class="fas fa-pause-circle"></i>
-                    <i class="fas fa-play"></i>        
+                    <i class="fas fa-play-circle"></i>        
                 </button></div>
                 <div><button class="btn-next"><i class="fas fa-forward"></i></button></div>
                 <div><button class="btn-random"><i class="fas fa-random"></i></button></div>
+            </div>
+            <div class="seekslider">
+                <div class="time">
+                    <span class="curtime">
+                        00:00
+                    </span>
+                    <span class="durtime">
+                        00:00
+                    </span>
+                </div>
+                <input id="progress" class="progress" type="range" value="0" step="1" min="0" max="100">
             </div>
         </div>
         <div class="list-item">
