--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         00:00
                     </span>
                 </div>
-                <input id="progress" class="progress" type="range" value="0" step="1" min="0" max="100">
+                <input id="progress" class="progress" type="range" value="0"  min="0" max="100">
             </div>
         </div>
         <div class="list-item">
@@ -86,7 +86,7 @@
                     </div>
  
                     <div class="col c-12">
-                        <a href="#" class="item mt">
+                        <a href="###" class="item mt">
                             <div class="item__img">
                                 <img class="img" src="./assets/img/2.jfif" alt="">
                             </div>
@@ -106,7 +106,7 @@
                     </div>
  
                     <div class="col c-12">
-                        <a href="#" class="item mt">
+                        <a href="###" class="item mt">
                             <div class="item__img">
                                 <img class="img" src="./assets/img/3.jfif" alt="">
                             </div>
@@ -126,7 +126,7 @@
                     </div>
  
                     <div class="col c-12">
-                        <a href="#" class="item mt">
+                        <a href="###" class="item mt">
                             <div class="item__img">
                                <img class="img" src="./assets/img/4.jfif" alt="">
                             </div>
@@ -146,7 +146,7 @@
                     </div>
  
                     <div class="col c-12">
-                        <a href="#" class="item mt">
+                        <a href="###" class="item mt">
                             <div class="item__img">
                                 <img class="img" src="./assets/img/5.jfif" alt="">
                             </div>
@@ -166,7 +166,7 @@
                     </div>
  
                     <div class="col c-12">
-                        <a href="#" class="item mt">
+                        <a href="###" class="item mt">
                             <div class="item__img">
                                 <img class="img" src="./assets/img/6.jfif" alt="">
                             </div>
@@ -186,7 +186,7 @@
                     </div>
  
                     <div class="col c-12">
-                        <a href="#" class="item mt">
+                        <a href="###" class="item mt">
                             <div class="item__img">
                                 <img class="img" src="./assets/img/7.jfif" alt="">
                             </div>
@@ -206,7 +206,7 @@
                     </div>
  
                     <div class="col c-12">
-                        <a href="#" class="item mt">
+                        <a href="###" class="item mt">
                             <div class="item__img">
                                 <img class="img" src="./assets/img/8.jfif" alt="">
                             </div>
@@ -226,7 +226,7 @@
                     </div>
  
                     <div class="col c-12">
-                        <a href="#" class="item mt">
+                        <a href="###" class="item mt">
                             <div class="item__img">
                                 <img class="img" src="./assets/img/9.jfif" alt="">
                             </div>
@@ -246,7 +246,7 @@
                     </div>
  
                     <div class="col c-12">
-                        <a href="#" class="item mt">
+                        <a href="###" class="item mt">
                             <div class="item__img">
                                 <img class="img" src="./assets/img/10.jfif" alt="">
                             </div>
